# cjb

./: .gitignore  PROJECT_OVERVIEW.md  README.md
cjb-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
cjb-backend/alembic/: env.py
cjb-backend/alembic/versions/: 09204c156863_add_user_id_to_jobs.py  1f2d10aa9401_add_role_column_to_user_profiles.py
cjb-backend/auth/: utils.py
cjb-backend/db/: database.py  models.py
cjb-backend/routers/: jobs.py  user_profiles.py
cjb-frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
cjb-frontend/src/: App.css  App.tsx  index.css  main.tsx
cjb-frontend/src/components/: JobCard.tsx  JobForm.tsx  Navbar.tsx  SearchBar.tsx
cjb-frontend/src/components/auth/: LoginButton.tsx  LogoutButton.tsx
cjb-frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  popover.tsx  table.tsx
cjb-frontend/src/context/: UserProfileContext.tsx
cjb-frontend/src/hooks/: jobHooks.ts  userProfileHooks.ts
cjb-frontend/src/lib/: exampleJob.json
cjb-frontend/src/pages/: AdminDashboard.tsx  JobAddPage.tsx  JobDetailPage.tsx  JobEditPage.tsx  JobListingsPage.tsx  UserProfilePage.tsx
